package models

import java.time.LocalDate

class Espectacle {
    public var nom : String
    public var acabament : String

    constructor(nom: String, acabament: String) {
        this.nom = nom
        this.acabament = acabament
    }

}